--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,7 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@tailwind base;
+@tailwind utilities;
+@tailwind components;
 
-* {
-  box-sizing: border-box;
-}
+* { font-family: 'Spoqa Han Sans Neo', 'sans-serif'; }
