--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,4 +4,6 @@
 @tailwind utilities;
 @tailwind components;
 
-* { font-family: 'Spoqa Han Sans Neo', 'sans-serif'; }
+* {
+  font-family: "Spoqa Han Sans Neo", "sans-serif";
+}
